# selfrf-repo

./: .gitignore  README.md  pyproject.toml
selfrf/: __init__.py
selfrf/finetuning/: __init__.py
selfrf/finetuning/detection/: __init__.py
selfrf/finetuning/detection/convert/: __init__.py  (+3 more)
selfrf/models/: __init__.py
selfrf/models/iq_models/: __init__.py
selfrf/models/spectrogram_models/: __init__.py
selfrf/models/ssl_models/: __init__.py  densecl.py  mae.py  vicregl.py
selfrf/pretraining/: __init__.py
selfrf/pretraining/config/: __init__.py  base_config.py  evaluation_config.py  training_config.py
selfrf/pretraining/evaluation/: __init__.py  knn.py  visualize_embeddings.py
selfrf/pretraining/factories/: __init__.py  collate_fn_factory.py  dataset_factory.py  model_factory.py  transform_factory.py
selfrf/pretraining/utils/: __init__.py  callbacks.py  enums.py  utils.py
selfrf/transforms/: __init__.py
selfrf/transforms/extra/: __init__.py  functional.py  target_transforms.py  torchsig_legacy_functional.py  torchsig_legacy_transforms.py  torchsig_legacy_utils.py  transforms.py
selfrf/transforms/ssl/: __init__.py  densecl_transfrom.py  mae_transfrom.py  vicregl_transform.py
selfrf/utils/: __init__.py  visualizer.py
tools/: evaluate_pretraining.py  generate_narrowband.py  pretraining.py  train_detection_faster_rcnn.py
tools/convert/: coco_to_yolo.py  convert_resnet_to_detectron2.py  convert_vit_to_detectron2.py  convert_yolo_to_onnx.py  sigmf_to_coco.py  torchsig_to_coco.py
tools/utils/: visualize_mae.py  visualze_vicregl.py
(+22 files in other folders)
