[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfRF"
description = "Library for Self-Supervised Learning for Radio Frequency Signals"
authors = [
    {name = "Roman Ziske"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["signal processing", "machine learning"]
dependencies = [
    "click>=8.1.8",
    "fvcore>=0.1.5",
    "lightly>=1.5.16",
    "lightning>=2.5.0",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.1",
    "pytorch-lightning>=2.5.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "timm>=1.0.15",
    "torch>=2.5.1",
    "tqdm>=4.65.2",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "selfrf.__version__"}

[tool.setuptools.packages.find]
include = ["selfrf*"]
exclude = ["configs*", "datasets*", "tools*"]
namespaces = false